@@ -60,49 +60,6 @@
         <targetPath>dataset</targetPath>
       </testResource>
     </testResources>
-
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>hibernate3-maven-plugin</artifactId>
-        <version>2.2</version>
-        <configuration>
-          <components>
-            <component>
-              <name>hbm2ddl</name>
-              <implementation>annotationconfiguration</implementation>
-            </component>
-          </components>
-          <componentProperties>
-            <drop>true</drop>
-            <jdk5>true</jdk5>
-            <propertyfile>src/test/resources/jdbc.properties</propertyfile>
-            <configurationfile>src/test/resources/hibernate.cfg.xml</configurationfile>
-          </componentProperties>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.13</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.4.3</version>
-        <configuration>
-          <forkMode>once</forkMode>
-          <argLine>-server -Xms512m -Xmx1024m -XX:MaxPermSize=256m</argLine>
-          <includes>
-            <include>**/*Test.java</include>
-          </includes>
-          <excludes>
-          </excludes>
-        </configuration>
-      </plugin>
-    </plugins>
   </build>
 
   <dependencies>
